Fix dark mode issue in docs
In dark mode, the "Part of:" bits of the docs were showing in black,
not white, as they are only in divs not ps

Fix by applying the same color rule to divs as is applied to ps by
vscode

--- a/web/docs/docstyle.css
+++ b/web/docs/docstyle.css
@@ -1,3 +1,9 @@
+/* add for vscode theming */
+div {
+  color: var(--vscode-editor-foreground) !important;
+}
+/* end */
+
 :root {
   --red: #cd2355;
   --red-tint: #d75a64;
